// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots modul-components|m-form/sandboxes Complex 1`] = `
<div
  class="m-sandboxes"
>
  <m-form-complex-sandbox />
</div>
`;

exports[`Storyshots modul-components|m-form/sandboxes External Validation 1`] = `
<div
  class="m-sandboxes"
>
  <m-form-external-validation-sandbox />
</div>
`;

exports[`Storyshots modul-components|m-form/sandboxes Reactivity 1`] = `
<div
  class="m-sandboxes"
>
  <m-form-reactivity-sandbox />
</div>
`;
